force-app/main/default/objects/Delivery_Route__c/Delivery_Route__c.object-meta.xml
<CustomObject>
    <label>Delivery Route</label>
    <pluralLabel>Delivery Routes</pluralLabel>
    
    <nameField>
        <displayFormat>RT-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>