force-app/main/default/objects/Delivery_Route__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <label>Branch</label>
    <type>Lookup</type>
    <referenceTo>Branch__c</referenceTo>
    <relationshipName>Branch</relationshipName>

</CustomField>