force-app/main/default/objects/Delivery_Route__c/fields/Driver__c.field-meta.xml
<CustomField>
    <fullName>Driver__c</fullName>
    <label>Driver</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Driver</relationshipName>

</CustomField>