force-app/main/default/objects/Delivery_Route__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
    <valueSetDefinition>
        <value><fullName>Planned</fullName></value>
        <value><fullName>In Progress</fullName></value>
        <value><fullName>Completed</fullName></value>
    </valueSetDefinition>
</valueSet>

</CustomField>