force-app/main/default/objects/Delivery_Route__c/fields/Total_Orders__c.field-meta.xml
<CustomField>
    <fullName>Total_Orders__c</fullName>
    <label>Total Orders</label>
    <type>Number</type>
    <precision>16</precision>
    <scale>0</scale>

</CustomField>